[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "species"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Toolkit for atmospheric characterization of directly imaged exoplanets"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "dust-extinction",
    "h5py",
    "matplotlib",
    "numba",
    "numpy",
    "pooch",
    "scipy",
    "spectres",
    "tqdm",
    "typeguard",
]
dynamic = ["version"]

[project.optional-dependencies]
full = [
    "astrodbkit2",
    "astroquery",
    "dynesty",
    "emcee",
    "molmass",
    "pandas",
    "PyMieScatt",
    "pymultinest",
    "requests",
    "schwimmbad",
    "shapely",
    "specutils",
    "SQLAlchemy",
    "ultranest",
    "xlrd",
]
docs = [
    "cython",
    "jupyter",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinxawesome-theme",
]
test = [
    "black",
    "flake8",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://species.readthedocs.io"
Repository = "https://github.com/tomasstolker/species"
Issues = "https://github.com/tomasstolker/species/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["species*"]

[tool.setuptools_scm]
write_to = "species/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"species.data" = ["*.json"]
